core/components/legend/Legend.module.css
.legendWrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: calc(100% - 44px);
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.legend {
  z-index: 3;
  right: 0;
  position: absolute;
  height: calc(100% - 67pt);
  transition: transform 0.5s;
  overflow: hidden;
  align-self: center;
  display: grid;
  grid-template-columns: minmax(0, 2.25rem) minmax(0, auto);
  user-select: none;
  overscroll-behavior: none;
  width: min(75vw, clamp(380px, 25vw, 33vw));
  pointer-events: auto;
  bottom: 0;
}

:global(#gw-map.is-mobile) .legendWrapper {
  top: -1.5rem;
  bottom: 0;
}

.legendOpen {
  transform: translateX(0);
  -webkit-transform: translateX(0);
}

.legendClose {
  transform: translateX(calc(100% - 2.25rem));
  -webkit-transform: translateX(calc(100% - 2.25rem));
}

.legendOpenButton {
  border-radius: 1rem 0 0 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-writing-mode: vertical-rl;
  -ms-writing-mode: tb-rl;
  writing-mode: vertical-rl;
  cursor: pointer;
  height: 70px;
  background-color: var(--map-accent-color);
  align-self: center;
  width: 2.25rem;
  border-top: 2px solid #ffffff;
  border-left: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  box-sizing: content-box;
  transition: filter var(--hover-transition-duration);
  overflow: hidden;
}

@media (hover: hover) {
  .legendOpenButton:hover {
    filter: brightness(95%);
  }
}

.legendOpenButton:active {
  filter: brightness(95%);
}

.legendOpenButton img {
  width: 50%;
  transition: transform 0.5s;
}

.legendOpen .legendOpenButton img {
  transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
}

.legendScrollContainer {
  overflow-y: auto;
  height: 100%;
  z-index: 2;
}

.legendContent {
  background: linear-gradient(
    -135deg,
    #ffffff 0%,
    #eeeffc 50%,
    #eeeffc 75%,
    #e3e5fa 90%,
    #d9dbf7 100%
  );
  background-color: #eeeffc;
  height: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  overflow: auto;
  border-radius: 2rem 0 0 2rem;
  border-top: 2px solid #00c49a;
  border-left: 2px solid #00c49a;
  border-bottom: 2px solid #00c49a;
}

.subjectDiv {
  overflow: hidden;
  background: var(--map-background-color-light);
}

.subjectDiv {
  border-top: var(--border-divider);
}

.subs {
  height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  box-sizing: border-box;
  background-color: #eeeffc;
  background: linear-gradient(
    -135deg,
    #ffffff 0%,
    #eeeffc 50%,
    #eeeffc 75%,
    #e3e5fa 90%,
    #d9dbf7 100%
  );
  overscroll-behavior: contain;
}

.animalStory {
  overflow-y: auto;
  overscroll-behavior: contain;
}

.title {
  background-color: #060a23;
  display: flex;
  flex-flow: column nowrap;
  gap: 0.5rem;
  padding: 1rem 0 1.5rem 0;
  background: linear-gradient(
    135deg,
    #060a23 0%,
    #060a23 75%,
    #0a0e2c 90%,
    #0e1235 100%
  );
  background-color: #060a23;
}

.tracker h1.mapTitle {
  font-family: var(--map-heading-font);
  letter-spacing: var(--heading-letter-spacing);
  font-weight: var(--map-h1-font-weight);
  font-size: var(--map-h1-font-size);
  margin-bottom: 0.5rem;
  padding: 0.5rem 0 0 1rem;
  color: white;
}

.developerLogo {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto auto;
  grid-row-gap: 0.5rem;
  margin: 0 1rem;
}

.developerText {
  --body-text-color: #fff;
  font-family: var(--map-body-font);
  font-size: var(--map-small-body-font-size);
  font-weight: var(--map-h2-font-weight);
  line-height: 1.2;
}

.developerContainer {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  grid-template-rows: 1fr;
}

.developerLogo .developerItem {
  display: flex;
  align-self: center;
}

.developerLogo .developerItem.dividerbox {
  flex: 0;
  opacity: 0.5;
  margin: 0 0.5rem;
  position: relative;
  border: 1px solid #fff;
  align-self: auto;
}

.developerLogo a {
  margin: 0;
  padding: 0.25rem;
  display: flex;
  flex: 1;
}

.developerLogo img {
  width: 0px;
  opacity: 0.5;
  flex: 1;
}

.return {
  display: flex;
  align-items: center;
  padding: 1rem;
  background-color: #ebebeb;
  border-bottom: solid 1pt rgba(0, 0, 0, 0.15);
  box-sizing: border-box;
  font-size: 1rem;
  cursor: pointer;
  transition: filter var(--hover-transition-duration);
}

.return:hover {
  filter: brightness(95%);
}

@media (hover: hover) {
  .return:hover {
    filter: brightness(95%);
  }
}

.return:active {
  filter: brightness(95%);
}

.backArrow {
  width: 1rem;
  height: auto;
}

:global(#gw-map) .return p:global(.map-body) {
  padding-left: 0.75rem;
  margin-top: 0;
}

.animalColor {
  display: none;
  width: 55%;
  border: solid purple;
}

.storyButton {
  margin-top: auto;
  margin-bottom: auto;
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 6px;
  margin-left: 3px;
}

.subImage {
  width: 100%;
  height: auto;
  box-sizing: border-box;
}

.subContentContainer {
  display: block;
  padding: 1rem;
}

.subContentBody {
  font-family: var(--map-body-font);
  font-size: var(--map-body-font-size);
  color: var(--map-body-color);
  margin-top: 0.125rem;
}

.subContentItem:not(:first-child) {
  margin-top: 1rem;
}

